# scastd

./: .gitignore  AGENTS.md  AUTHORS.md  CONTRIBUTING.md  ChangeLog.md  INSTALL.md  Makefile.am  Makefile.in  NEWS.md  README.md  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  mkinstalldirs  scastd.conf  scastd.service  scastd_pg.conf
.github/actions/build-and-test/: action.yml
.github/actions/setup-mysql-connector/: action.yml
.github/workflows/: ci.yml  dev.yml  future.yml  master.yml  prod.yaml  release.yml
bkup/: Makefile.am
docs/: CI.md  CISecrets.md  DatabaseMigration.md  HTTPS.md  Icecast2.md  Logging.md  Packaging.md  PostgreSQL.md  ResourceLimits.md
examples/: README.md  api_db_example.py
packaging/debian/: build_deb.sh  postinst  scastd.service
packaging/macos/: README.md  build_formula.sh  build_pkg.sh  org.scastd.daemon.plist
packaging/macos/Formula/: scastd.rb
po/: en.po  scastd.pot
scripts/: Makefile.am  Makefile.in  gen_self_signed_cert.sh  generate_release_notes.sh  install_deps.sh  setup_certbot.sh
src/: Config.cpp  Config.h  CurlClient.cpp  CurlClient.h  CurlWrapper.cpp  CurlWrapper.h  DB.cpp  DB.h  HttpServer.cpp  HttpServer.h  Makefile  Makefile.am  Makefile.in  Socket.cpp  Socket.h  StatusLogger.cpp  StatusLogger.h  UrlParser.cpp  UrlParser.h  i18n.cpp  i18n.h  icecast2.cpp  icecast2.h  logger.cpp  logger.h  main.cpp  mariadb.sql  postgres.sql  run_scastd.sh  scastd.cpp  scastd.h  scastd.sql  sqlite.sql
src/db/: IDatabase.h  MariaDBDatabase.cpp  MariaDBDatabase.h  MySQLDatabase.cpp  MySQLDatabase.h  PostgresDatabase.cpp  PostgresDatabase.h  SQLiteDatabase.cpp  SQLiteDatabase.h
tests/: Makefile.am  Makefile.in  stubs.cpp  test_config.cpp  test_db_invalid.cpp  test_http.cpp  test_icecast.cpp  test_icecast_dev.cpp  test_logger.cpp  test_main.cpp  test_missing_config.cpp  test_permissions.sh  test_pid.cpp  test_scastd_cli.cpp  test_setupdb.cpp  test_sql.cpp  test_url_parser.cpp
tests/src/: mariadb.sql  postgres.sql
