dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/scastd.cpp)

AM_INIT_AUTOMAKE(scastd,1.0)

AC_PROG_CXX
AC_CANONICAL_HOST
AM_PROG_LIBTOOL

dnl Use a modern C++ compiler with Linux specific options
CXXFLAGS="$CXXFLAGS -std=c++17 -Wall -D_GNU_SOURCE"

dnl Checks for required libraries
AC_CHECK_LIB([xml2], [xmlParseFile], [LIBS="$LIBS -lxml2"], [AC_MSG_ERROR([libxml2 not found])])
AC_CHECK_LIB([curl], [curl_easy_init], [LIBS="$LIBS -lcurl"], [AC_MSG_ERROR([libcurl not found])])
AC_CHECK_LIB([mysqlclient], [mysql_init], [LIBS="$LIBS -lmysqlclient"], [AC_MSG_ERROR([libmysqlclient not found])])
AC_CHECK_LIB([pq], [PQconnectdb], [LIBS="$LIBS -lpq"], [AC_MSG_ERROR([libpq not found])])

dnl Make substitutions
AC_SUBST(CXXFLAGS)
AC_SUBST(LIBS)

AC_OUTPUT(Makefile src/Makefile)

